# sharp-lcd-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  sdkconfig
components/rtc/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild
main/clock/: 3231-clock.cpp
main/games/: life.cpp
main/lvgl-demo/: ux.cpp
main/settings/: settings.h
main/tests/: hello-lcd.cpp  i2c-scan.cpp  lcd-only.cpp  lcd-touch.cpp  mxt-touch-lcd.cpp  pm-cpu-speed.c
main/translations/: catala.h  deutsch.h  english.h  spanish.h
